Subida 2da Pre-entrega del P.f.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <section>
 
-        <nav class="navbar navbar-expand-lg" id="cabecera">
+        <nav class="navbar navbar-expand-md" id="cabecera">
 
             <section>
 
@@ -39,7 +39,7 @@
                     <button id="color" class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
                         aria-label="Toggle navigation">
-                        <img= class="navbar-toggler-icon" src="c:\Users\Usuario\Downloads\bars-solid.svg">
+                        <img= class="navbar-toggler-icon" src="multimedia/galeria/extras/bars-solid.svg">
 
                     </button>
 
@@ -50,6 +50,7 @@
             <section>
 
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
                         <li class="nav-item">
@@ -186,6 +187,7 @@
 
                                     <span><br></span>
                                     <span><br></span>
+                                    <span><br></span>
 
                                     Así llegó Ramses... un viejito de 14 años!
                                     Quien no me recibió muy contento que se diga!! jeje... nahh.. pero después...<br>Ya
@@ -205,9 +207,10 @@
 
                                     <span><br></span>
                                     <span><br></span>
+                                    <span><br></span>
 
-                                    Aquí Ramses está como queeee... bueeeno.. al menos ahí.. vamos bien ¨/\¨
-                                    .. de a poco ... está con ganas de descansar parece</span>
+                                    Aquí está como queeee... bueeeno.. al menos ahí.. vamos... ¨/\¨
+                                    de a poco ... (está con ganas de descansar parece)</span>
 
                             </div>
 
@@ -230,7 +233,7 @@
                                     <span><br></span>
                                     <span><br></span>
 
-                                    Y pues.. así quedó la bestia ya domada jajaja.. Su dueña le dijo confianzudo.. <br> como que después ya no se quería ir <br>♥</span>
+                                   Así quedó el gruñón jaj.. <br> La dueña le dijo confianzudo .. <br> después, como que ya no se quería ír <br>♥</span>
                             </div>
 
                         </div>
@@ -274,7 +277,7 @@
 
                         <iframe
                             src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d6106.394167275056!2d-70.64214954207034!3d-33.43537191313607!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xbbb70dc2cbdce1b0!2sParque%20Forestal!5e0!3m2!1ses-419!2scl!4v1672154744202!5m2!1ses-419!2scl"
-                            width="450" height="550" allowfullscreen=" padding-top=0" loading="lazy"
+                            width="400" height="550" allowfullscreen=" padding-top=0" loading="lazy"
                             referrerpolicy="no-referrer-when-downgrade">
                         </iframe>
 
