--- a/vistas html/Peluquería.html
+++ b/vistas html/Peluquería.html
@@ -32,10 +32,13 @@
                     <a href="../index.html"> <img src="../multimedia/logos/LogoW.webp"
                             alt="Cachorro sentado mirando a la derecha en la salida de una casa para perros">
                     </a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+
+                    <!-- boton hambuerguesa -->
+
+                    <button id="color" class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
                         aria-label="Toggle navigation">
-                        <img= class="navbar-toggler-icon" src="c:\Users\Usuario\Downloads\bars-solid.svg">
+                        <img= class="navbar-toggler-icon" src="../multimedia/galeria/extras/bars-solid.svg">
 
                     </button>
 
@@ -45,14 +48,13 @@
 
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        
+
                         <li class="nav-item">
                             <a class="nav-link" href="../vistas html/Tienda.html">TIENDA</a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page"
-                                href="Peluquería.html">PELUQUERÍA</a>
+                            <a class="nav-link" aria-current="page" href="Peluquería.html">PELUQUERÍA</a>
                         </li>
 
                         <li class="nav-item">
@@ -66,13 +68,23 @@
 
     </section>
 
-    <h1 class="text-center">PRECIOS</h1>
+    <main>
 
-    <img src="../multimedia/galeria/extras/listadeprecios.png" alt="lista de precios para cortes de pelos en perros">
+        <section class="text-center">
+
+            <h1 >PRECIOS</h1>
+
+            <div id="h1P">
+
+            <img src="../multimedia/galeria/extras/listadeprecios.png" alt="lista de precios para cortes de pelos en perros">
+
+            </div>
+
+        
+        </section>
 
 
-
-
+    </main>
 
 
     <footer>
