--- a/vistas html/Peluquería.html
+++ b/vistas html/Peluquería.html
@@ -35,7 +35,7 @@
 
                     <!-- boton hambuerguesa -->
 
-                    <button id="color" class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    <button id="colorH" class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
                         aria-label="Toggle navigation">
                         <img= class="navbar-toggler-icon" src="../multimedia/galeria/extras/bars-solid.svg">
