--- a/PrimeraEntrega/index(1er entrega).html
+++ b/PrimeraEntrega/index(1er entrega).html
@@ -40,7 +40,7 @@
 
                     <li>
 
-                        <a href="vistas html/Peluquería.html">PELUQUERÍA</a>
+                        <a href="vistas html/Peluquería.html">PELUQUERIA</a>
 
                     </li>
 
@@ -110,7 +110,7 @@
                     su/s mascota/s, también podrá comprar nuestros productos y desplegar la pestaña de Reservas, revisar
                     el itinerario mensual y horas disponibles en el mes. De esta manera usted podrá gestionar su reserva
                     e inmediatamente llegará a su correo electrónico una notificación para confirmar la próxima visita a
-                    nuestro salón el día y a la hora que usted haya escogido.
+                    nuestro Peluqueria el día y a la hora que usted haya escogido.
 
                 </p>
 
