--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <button class="btn"><a href="vistas html/Peluquería.html">PELUQUERÍA</a>
+                            <button class="btn"><a href="vistas html/Peluquería.html">PELUQUERIA</a>
                             </button>
                         </li>
 
@@ -129,7 +129,7 @@
                 </div>
                 Inmediatamente llegará a su correo - una notificación para confirmar la próxima
                 visita a
-                nuestro salón el día y a la hora que usted haya escogido.
+                nuestro Peluqueria el día y a la hora que usted haya escogido.
 
                 <span><br></span>
                 <span><br></span>
