--- a/vistas html/Reservas.html
+++ b/vistas html/Reservas.html
@@ -21,21 +21,22 @@
 
 <body class="p-0 m-0 border-0">
 
-    <!-- inicia cabecera-->
+
+    <!-- inicia cabecera y enlaces internos -->
 
     <section>
 
-        <nav class="navbar navbar-expand-lg" id="cabecera">
+        <nav class="navbar navbar-expand-md" id="cabecera">
 
             <section>
 
                 <div class="container-fluid">
-                    <a href="../index.html"> <img src="../multimedia/logos/LogoW.webp"
+                    <a href="../index.html"><img src="../multimedia/logos/LogoW.webp"
                             alt="Cachorro sentado mirando a la derecha en la salida de una casa para perros">
                     </a>
 
                     <!-- boton hambuerguesa -->
-                    
+
                     <button id="colorH" class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
                         aria-label="Toggle navigation">
@@ -43,26 +44,32 @@
 
                     </button>
 
+                </div>
+
             </section>
 
             <section>
 
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+
                         <li class="nav-item">
-                            <a class="nav-link" href="../vistas html/Tienda.html">TIENDA</a>
+                            <button class="btn"><a href="../vistas html/Tienda.html">TIENDA</a></button>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page"
-                                href="../vistas html/Peluquería.html">PELUQUERÍA</a>
+                            <button class="btn"><a href="../vistas html/Peluquería.html">PELUQUERIA</a>
+                            </button>
                         </li>
 
-                        <li class="nav-item">
-                            <a class="nav-link" href="Reservas.html">RESERVA</a>
+                        <li>
+                            <button class="btn"><a href="../vistas html/Reservas.html">RESERVA</a>
+                            </button>
                         </li>
+
                     </ul>
-                </div>
+
                 </div>
         </nav>
 
