--- a/vistas html/Tienda.html
+++ b/vistas html/Tienda.html
@@ -31,7 +31,7 @@
             <section>
 
                 <div class="container-fluid">
-                    <a href="../index.html"> <img src="../multimedia/logos/LogoW.webp"
+                    <a href="../index.html"><img src="../multimedia/logos/LogoW.webp"
                             alt="Cachorro sentado mirando a la derecha en la salida de una casa para perros">
                     </a>
 
@@ -55,15 +55,17 @@
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
                         <li class="nav-item">
-                            <a class="nav-link" href="Tienda.html">TIENDA</a>
+                            <button class="btn"><a href="../vistas html/Tienda.html">TIENDA</a></button>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="../vistas html/Peluquería.html">PELUQUERÍA</a>
+                            <button class="btn"><a href="../vistas html/Peluquería.html">PELUQUERIA</a>
+                            </button>
                         </li>
 
-                        <li class="nav-item">
-                            <a class="nav-link" href="../vistas html/Reservas.html">RESERVA</a>
+                        <li>
+                            <button class="btn"><a href="../vistas html/Reservas.html">RESERVA</a>
+                            </button>
                         </li>
 
                     </ul>
@@ -74,6 +76,7 @@
     </section>
 
     <!-- cierre de pestañas cabecera -->
+
 
     <main>
 
