--- a/vistas html/Galería.html
+++ b/vistas html/Galería.html
@@ -59,7 +59,7 @@
     
                             <li class="nav-item">
                                 <a class="nav-link" aria-current="page"
-                                    href="../vistas html/Peluquería.html"><br>PELUQUERÍA</a>
+                                    href="../vistas html/Peluquería.html"><br>Peluqueria</a>
                             </li>
     
                             <li class="nav-item">
