subida 3ra entrega compilada en sass

--- a/vistas html/Tienda.html
+++ b/vistas html/Tienda.html
@@ -8,14 +8,11 @@
     <!-- link a favicon -->
     <link rel="shortcut icon" href="../multimedia/favicon/icons8-dog-house-24.png" type="image/x-icon">
 
-    <!-- link al css de boostrap online -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- link al css de boostrap -->
+    <link href="../css/bootstrap.min.css" rel="stylesheet">
 
     <!-- link a mi css -->
-    <link rel="stylesheet" href="../css/bstyle.css">
-
-    <!-- inicia script js -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="../css/styles.css">
 
 </head>
 
@@ -31,7 +28,8 @@
             <section>
 
                 <div class="container-fluid">
-                    <a href="../index.html"><img src="../multimedia/logos/LogoW.webp"
+                    <a href="../index.html">
+                        <img src="../multimedia/logos/LogoW.webp"
                             alt="Cachorro sentado mirando a la derecha en la salida de una casa para perros">
                     </a>
 
@@ -102,8 +100,7 @@
                             <div id="tienda">
 
                                 Para nuestros jóvenes héroes que se esfuerzan por jugar mucho: <br> Una
-                                combinación especial para el crecimiento en perros de razas medianas y grandes. Esta
-                                receta con aporte energético reducido y contenido moderado de grasas y proteínas,
+                                combinación especial para perros de razas medianas y grandes. Con aporte energético reducido y contenido moderado de grasas y proteínas,
                                 garantiza un ritmo de crecimiento moderado, huesos fuertes y articulaciones sanas.</p>
 
                                 <SPAn><br></SPAn>
