--- a/index.html
+++ b/index.html
@@ -8,14 +8,11 @@
     <!-- link a favicon -->
     <link rel="shortcut icon" href="multimedia/favicon/icons8-dog-house-24.png" type="image/x-icon">
 
-    <!-- link al css de boostrap online -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- link al css de boostrap -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- link a mi css -->
-    <link rel="stylesheet" href="css/bstyle.css">
-
-    <!-- inicia script js -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="css/styles.css">
 
 </head>
 
@@ -31,7 +28,8 @@
             <section>
 
                 <div class="container-fluid">
-                    <a href="index.html"><img src="multimedia/logos/LogoW.webp"
+                    <a href="index.html">
+                        <img src="multimedia/logos/LogoW.webp"
                             alt="Cachorro sentado mirando a la derecha en la salida de una casa para perros">
                     </a>
 
@@ -169,13 +167,13 @@
 
                         <div class="carousel-inner m-auto container">
 
-                            <div class="row carousel-item active mx-auto my-md-3 text-center">
+                            <div id="caption" class="row carousel-item active text-center mx-auto">
 
                                 <img src="multimedia/galeria/canes/Ramses/Ramses.425273.webp" class="img-fluid"
                                     alt="Acariciando a perro en mesa grooming previo al corte">
 
 
-                                <span id="caption">
+                                <span>
 
                                     <span><span><br></span></span>
                                     <span>(Ramses)</span>
@@ -192,11 +190,11 @@
                                     alt="Perro en mesa grooming mirando a la derecha">
                             </div>
 
-                            <div class="carousel-item align-middle text-center">
+                            <div id="caption" class="carousel-item align-middle text-center">
                                 <img src="multimedia/galeria/canes/Ramses/Ramses.1411402.webp" class="img-fluid"
                                     alt="Perro en mesa grooming inicio del corte">
 
-                                <span id="caption">
+                                <span >
 
                                     <span><br></span>
                                     <span><br></span>
@@ -212,19 +210,20 @@
                                     alt="Perro en mesa grooming mirando a la derecha">
                             </div>
 
-                            <div class="carousel-item align-middle text-center">
+                            <div id="caption" class="carousel-item align-middle text-center">
                                 <img src="multimedia/galeria/canes/Ramses/Ramses.5559614.webp" class="img-fluid"
                                     alt="Perro en mesa grooming mirando a la derecha">
 
-                                <span id="caption">
+                                <span>
 
                                     <span><br></span>
                                     <span><br></span>
                                     <span><br></span>
 
-                                    Aquí está como queeee... bueeeno.. al menos ahí vamos... ¨/\¨
-                                    de a poco ...
-                                    <br>(está con ganas de descansar parece)</span>
+                                    Aquí está como queeee... <br> bueeeno.. al menos ahí vamos 
+                                    <br>/(¨/\¨)\
+                                    <br> de a poco ...
+                                    <br>(con ganas de descansar parece)</span>
 
                             </div>
 
@@ -248,7 +247,7 @@
                                     <span><br></span>
 
                                     Así quedó el gruñón jaj.. <br> La dueña le dijo confianzudo .. <br> después, como
-                                    que ya no se quería ír <br>♥</span>
+                                    que ya <br>no se quería ír ♥</span>
                             </div>
 
                         </div>
@@ -385,6 +384,9 @@
         </div>
 
     </footer>
+
+<!-- inicia script js -->
+<script src="js/bootstrap.bundle.min.js"></script>
 
 </body>
 
