--- a/vistas html/Reservas.html
+++ b/vistas html/Reservas.html
@@ -8,14 +8,11 @@
     <!-- link a favicon -->
     <link rel="shortcut icon" href="../multimedia/favicon/icons8-dog-house-24.png" type="image/x-icon">
 
-    <!-- link al css de boostrap online -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- link al css de boostrap -->
+    <link href="../css/bootstrap.min.css" rel="stylesheet">
 
     <!-- link a mi css -->
-    <link rel="stylesheet" href="../css/bstyle.css">
-
-    <!-- inicia script js -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="../css/styles.css">
 
 </head>
 
