subida 3ra entrega compilada en sass

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 Nos especializamos en el buen trato y atención de su mascota, es por esto que hemos
                 implementado un sistema de reserva de hora. Con el propósito de dar el espacio y tiempo
                 necesario
-                que requiere el servicio (VIP) que usted está pagando. El enfoque siempre va ser de todas
+                que requiere el servicio (VIP) que usted está pagando. <br> El enfoque siempre va ser de todas
                 maneras,
                 el no estresar tanto a la mascota como a su peluquero.
 
@@ -121,13 +121,13 @@
 
                 <div class="justify">- Registrar un perfil y una ficha para
                     su/s mascota/s
-                    <br>- Comprar nuestros productos y recomendados
+                    <br>- Comprar nuestros productos recomendados
                     <br>- Revisar el itinerario mensual y horas disponibles</span>
                     <span><br>
                 </div>
                 Inmediatamente llegará a su correo - una notificación para confirmar la próxima
                 visita a
-                nuestro Peluqueria el día y a la hora que usted haya escogido.
+                nuestro salón el día y a la hora que usted haya escogido.
 
                 <span><br></span>
                 <span><br></span>
@@ -200,7 +200,7 @@
                                     <span><br></span>
                                     <span><br></span>
 
-                                    Así llegó Ramses... un viejito de 14 años!
+                                    Así llegó Ramses... <br> un viejito de 14 años!
                                     Quien no me recibió muy contento que se diga!! jeje... nahh.. pero después...<br>Ya
                                     verán</span>
                             </div>
