--- a/vistas html/Tienda.html
+++ b/vistas html/Tienda.html
@@ -95,7 +95,7 @@
                             <h2 class="card-title">Alimento Marca: <br> KIDS</h2>
                             <p class="card-text"> <strong>Receta libre de gluten</strong>
 
-                                <SPAn><br></SPAn>
+                                <span><br></span>
 
                             <div id="tienda">
 
@@ -103,7 +103,7 @@
                                 combinación especial para perros de razas medianas y grandes. Con aporte energético reducido y contenido moderado de grasas y proteínas,
                                 garantiza un ritmo de crecimiento moderado, huesos fuertes y articulaciones sanas.</p>
 
-                                <SPAn><br></SPAn>
+                                <span><br></span>
 
                             </div>
 
@@ -125,7 +125,7 @@
                             <h2 class="card-title">Alimento Marca: <br> MINIJUNIOR</h2>
                             <p class="card-text"> <strong>Receta libre de gluten</strong>
 
-                                <SPAn><br></SPAn>
+                                <span><br></span>
 
                             <div id="tienda">
 
@@ -135,8 +135,8 @@
                                 primeras semanas de vida.
 
 
-                                <SPAn><br></SPAn>
-                                <SPAn><br></SPAn>
+                                <span><br></span>
+                                <span><br></span>
 
                                 </p>
 
@@ -159,7 +159,7 @@
                             <h2 class="card-title">Alimento Marca: <br> MINIVITA</h2>
                             <p class="card-text"> <strong>Receta libre de gluten</strong>
 
-                                <SPAn><br></SPAn>
+                                <span><br></span>
 
                             <div id="tienda">
 
@@ -169,7 +169,7 @@
                                 cierta edad. Contiene hierbas, frutas e ingredientes de la mejor calidad para saciar su
                                 apetito cuidando su salud.</p>
 
-                                <SPAn><br></SPAn>
+                                <span><br></span>
 
                             </div>
 
@@ -190,7 +190,7 @@
                             <h2 class="card-title">Alimento Marca: <br> MINIWELL</h2>
                             <p class="card-text"> <strong>Receta libre de gluten</strong>
 
-                                <SPAn><br></SPAn>
+                                <span><br></span>
 
                             <div id="tienda">
 
@@ -201,9 +201,9 @@
                                 máximo disfrute y otorga una nutrición saludable con un pelaje brillante.
 
 
-                                <SPAn><br></SPAn>
-                                <SPAn><br></SPAn>
-                                <SPAn><br></SPAn>
+                                <span><br></span>
+                                <span><br></span>
+                                <span><br></span>
 
                                 </p>
 
@@ -271,6 +271,9 @@
         </div>
 
     </footer>
+
+<!-- inicia script js -->
+<script src="js/bootstrap.bundle.min.js"></script>
 
 </body>
 
