--- a/vistas html/Galería.html
+++ b/vistas html/Galería.html
@@ -148,7 +148,10 @@
 
         </div>
 
-    </footer>
+   </footer>
+   
+<!-- inicia script js -->
+<script src="js/bootstrap.bundle.min.js"></script>
 
 </body>
 
