--- a/vistas html/Reservas.html
+++ b/vistas html/Reservas.html
@@ -82,9 +82,9 @@
 
                 <div>
 
-                    <iframe
+                    <iframe id="reserva"
                         src="https://calendar.google.com/calendar/embed?src=4a01591299a6532fa7ee41c1fa01b58d33522b96c4fff38fbf67d2c5a92fb0ed%40group.calendar.google.com&ctz=America%2FSantiago"
-                        style="border-radius: 2%; border: solid" width="600" height="400" frameborder="0" scrolling="no">
+                        >
                     </iframe>
                 
                 </div>
@@ -130,6 +130,9 @@
         </div>
 
     </footer>
+
+<!-- inicia script js -->
+<script src="js/bootstrap.bundle.min.js"></script>
 
 </body>
 
