subida de 3ra pre-entrega

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>DogSides - Un Sevicio Selecto</title>
+    <!-- metas para seo  -->
+    <meta name="description" content="Nos especializamos en el buen trato y atención de su mascota. Contamos con personal a disposición en mención pro bienestar animal para un servicio VIP">
+    <meta name="keywords" content="peluquería canina, perros, dogsides"
     <!-- link a favicon -->
     <link rel="shortcut icon" href="multimedia/favicon/icons8-dog-house-24.png" type="image/x-icon">
 
@@ -110,7 +113,7 @@
                 personal
                 adecuado para brindar dicho servicio. Contamos con el personal a disposición y certificados con
                 la
-                mención de pro bienestar animal. Nuestro personal está preparado para dar primeros auxilios,
+                mención de pro-bienestar animal. Nuestro personal está preparado para dar primeros auxilios,
                 posee
                 técnicas de revisión y chequeo veterinarios en general.
 
