--- a/vistas html/Tienda.html
+++ b/vistas html/Tienda.html
@@ -4,7 +4,10 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>DogSides - Un Sevicio Selecto</title>
+    <title>DogSides - Productos Recomendados</title>
+    <!-- metas para seo  -->
+    <meta name="description" content="Nos especializamos en el buen trato y atención de su mascota. Contamos con personal a disposición en mención pro bienestar animal para un servicio VIP">
+    <meta name="keywords" content="peluquería canina, perros, productos recomendados, alimentos"
     <!-- link a favicon -->
     <link rel="shortcut icon" href="../multimedia/favicon/icons8-dog-house-24.png" type="image/x-icon">
 
@@ -273,7 +276,7 @@
     </footer>
 
 <!-- inicia script js -->
-<script src="js/bootstrap.bundle.min.js"></script>
+<script src="../js/bootstrap.bundle.min.js"></script>
 
 </body>
 
